apps/cxs-cube-api/overlays/production/cxs-cube-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cxs-cube-api
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: cube.contextsuite.com
      http:
        paths:
          - backend:
              service:
                name: cxs-cube-api
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - cube.contextsuite.com
      secretName: cube-contextsuite-com-tls
